--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.cosmocode</groupId>
   <artifactId>log4j-config</artifactId>
   <packaging>jar</packaging>
-  <version>2.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>CosmoCode Log4j Config</name>
   <url>http://www.cosmocode.de</url>
   <parent>
@@ -13,7 +12,7 @@
   	<version>1.3</version>
   </parent>
   <scm>
-    <developerConnection>scm:svn:https://commons.svn.cosmocode.de/log4j-config/trunk</developerConnection>
+    <developerConnection>scm:svn:https://commons.svn.cosmocode.de/log4j-config/tags/1.0</developerConnection>
   </scm>
   <dependencies>
   	<dependency>
