--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,16 @@
   <groupId>de.cosmocode</groupId>
   <artifactId>log4j-config</artifactId>
   <packaging>jar</packaging>
-  <version>2.0-SNAPSHOT</version>
+  <version>1.0.1</version>
   <name>CosmoCode Log4j Config</name>
   <url>http://www.cosmocode.de</url>
   <parent>
   	<artifactId>cosmocode-parent</artifactId>
   	<groupId>de.cosmocode</groupId>
-  	<version>1.3</version>
+  	<version>1.5.0</version>
   </parent>
   <scm>
-    <developerConnection>scm:svn:https://commons.svn.cosmocode.de/log4j-config/trunk</developerConnection>
+    <developerConnection>scm:svn:https://commons.svn.cosmocode.de/log4j-config/tags/1.0.1</developerConnection>
   </scm>
   <dependencies>
   	<dependency>
