--- a/pom.xml
+++ b/pom.xml
@@ -3,22 +3,18 @@
   <groupId>de.cosmocode</groupId>
   <artifactId>log4j-config</artifactId>
   <packaging>jar</packaging>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
   <name>CosmoCode Log4j Config</name>
   <url>http://www.cosmocode.de</url>
   <parent>
     <artifactId>cosmocode-parent</artifactId>
     <groupId>de.cosmocode</groupId>
-    <version>1.5.2</version>
+    <version>2.0.1</version>
   </parent>
   <scm>
-    <developerConnection>scm:svn:https://commons.svn.cosmocode.de/log4j-config/trunk</developerConnection>
+    <developerConnection>scm:svn:https://commons.svn.cosmocode.de/log4j-config/tags/1.1</developerConnection>
   </scm>
   <dependencies>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
