--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>de.cosmocode</groupId>
-        <artifactId>cosmocode-parent</artifactId>
-        <version>2.3.0</version>
-    </parent>
+	<parent>
+		<groupId>de.cosmocode</groupId>
+		<artifactId>cosmocode-parent</artifactId>
+		<version>2.3.0</version>
+	</parent>
 
-    <name>CosmoCode Log4j Config</name>
+	<name>CosmoCode Log4j Config</name>
 
-    <groupId>de.cosmocode</groupId>
-    <artifactId>log4j-config</artifactId>
-    <version>1.4-SNAPSHOT</version>
+	<groupId>de.cosmocode</groupId>
+	<artifactId>log4j-config</artifactId>
+	<version>1.4-SNAPSHOT</version>
 
-    <packaging>jar</packaging>
+	<packaging>jar</packaging>
 
-    <scm>
-        <developerConnection>scm:svn:https://commons.svn.cosmocode.de/log4j-config/trunk</developerConnection>
-    </scm>
+	<scm>
+		<developerConnection>scm:svn:https://commons.svn.cosmocode.de/log4j-config/trunk</developerConnection>
+	</scm>
+	<repositories>
+		<repository>
+			<id>cosmocode-public</id>
+			<name>CosmoCode Public Maven Repository</name>
+			<url>http://mvn.cosmocode.de/</url>
+		</repository>
+	</repositories>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+		</dependency>
+	</dependencies>
 </project>
