--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
 
 	<groupId>de.cosmocode</groupId>
 	<artifactId>log4j-config</artifactId>
-	<version>1.4-SNAPSHOT</version>
+	<version>1.3.1</version>
 
 	<packaging>jar</packaging>
 
 	<scm>
-		<developerConnection>scm:svn:https://commons.svn.cosmocode.de/log4j-config/trunk</developerConnection>
+		<developerConnection>scm:svn:https://commons.svn.cosmocode.de/log4j-config/tags/1.3.1</developerConnection>
 	</scm>
 	<repositories>
 		<repository>
