--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <name>CosmoCode Log4j</name>
   <groupId>de.cosmocode</groupId>
-  <artifactId>log4j-config</artifactId>
+  <artifactId>cosmocode-log4j</artifactId>
   <version>1.4-SNAPSHOT</version>
   <packaging>jar</packaging>
   <scm>
